--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -3,9 +3,10 @@ HOST=0.0.0.0
 PORT=5000
 DEBUG=True
 
-# RAG Layer (Optional - for online diagnosis)
-USE_ONLINE_RAG=False
-OPENAI_API_KEY=
+# RAG Layer - AI Model APIs
+USE_ONLINE_RAG=True
+GEMINI_API_KEY=your_gemini_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
 
 # Logging
 LOG_LEVEL=INFO
