--- a/Frontend/vesire/pubspec.yaml
+++ b/Frontend/vesire/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +41,8 @@ dependencies:
   permission_handler: ^11.3.1
   connectivity_plus: ^6.0.5
   fl_chart: ^0.69.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
