--- a/Frontend/vesire/pubspec.yaml
+++ b/Frontend/vesire/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   fl_chart: ^0.69.0
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  # Firebase
+  firebase_core: ^2.12.0
+  firebase_auth: ^4.6.5
   
   # Camera and Image Processing
   camera: ^0.11.0+2
@@ -55,6 +58,9 @@ dependencies:
   
   # UUID for unique IDs
   uuid: ^4.5.1
+  
+  # Text-to-speech
+  flutter_tts: ^3.6.6
 
 dev_dependencies:
   flutter_test:
