--- a/Frontend/vesire/pubspec.yaml
+++ b/Frontend/vesire/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   
   # Text-to-speech
   flutter_tts: ^3.6.6
+  
+  # ON-DEVICE AI - ONNX Runtime for YOLOv8
+  onnxruntime: ^1.4.1
+  ffi: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -85,9 +89,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/models/agriscan_model.onnx
+    - assets/models/labels.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
