--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@
 # AgriScan Backend - Python Dependencies
 # ============================================================================
 
+# Build tools - ensure wheels can be built on cloud builders
+setuptools>=65.0.0
+wheel>=0.38.0
+
+
 # Core Web Framework
 flask==3.0.0
 flask-cors==4.0.0
