fix: render backend deployment - correct rootDir and imports

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -12,11 +12,11 @@ SQLAlchemy==2.0.23
 # Environment
 python-dotenv==1.0.0
 
-# AI/ML - Using wheel-compatible versions for faster builds
+# AI/ML - Using prebuilt binary wheels for cloud compatibility
 ultralytics==8.1.0
 opencv-python-headless==4.8.1.78
-numpy==1.26.2
-Pillow==10.3.0
+numpy>=1.24.0,<2.0.0
+Pillow>=10.0.0,<11.0.0
 onnxruntime==1.16.3
 
 # LLM APIs
