--- a/Frontend/vesire/.gitignore
+++ b/Frontend/vesire/.gitignore
@@ -30,7 +30,10 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+# IMPORTANT: Include build/web for Netlify deployment
+# /build/
+/build/*
+!/build/web/
 /coverage/
 
 # Symbolication related
