--- a/Backend/render.yaml
+++ b/Backend/render.yaml
@@ -5,8 +5,8 @@ services:
     env: python
     region: oregon
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 api.app:app
+    buildCommand: cd Backend && pip install -r requirements.txt
+    startCommand: cd Backend && gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 api.app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
