--- a/Frontend/vesire/pubspec.yaml
+++ b/Frontend/vesire/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   permission_handler: ^11.3.1
   connectivity_plus: ^6.0.5
+  internet_connection_checker_plus: ^2.5.2
   fl_chart: ^0.69.0
   shared_preferences: ^2.2.2
   provider: ^6.1.1
@@ -102,6 +103,7 @@ flutter:
   assets:
     - assets/models/agriscan_model.onnx
     - assets/models/labels.txt
+    - assets/data/disease_knowledge.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
